--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@ BROWSERSYNC:
   url: "https://covid-map.loc"
 
 # Set to true if you want static asset revisioning, helpful for cache busting
-REVISIONING: true
+REVISIONING: false
 
 # Gulp will reference these paths when it copies files
 PATHS:
