--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "foundation-sites": "6.6.3",
     "jquery": "^3.6.0",
+    "jsvectormap": "^1.3.2",
     "vanilla-lazyload": "^17.3.1"
   },
   "devDependencies": {
